@@ -2,6 +2,7 @@ HBase Change Log
 Release 0.19.1 - Unreleased
   BUG FIXES
    HBASE-1121  Cluster confused about where -ROOT- is
+   HBASE-1148  Always flush HLog on root or meta region updates
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
